small spacing issues for news3 layout
git-svn-id: http://calpresstheme.googlecode.com/svn/trunk@152 a02837fa-88ba-2307-23dd-5b8dd1ba40a4

--- a/assets/css/calpress-base.css
+++ b/assets/css/calpress-base.css
@@ -803,7 +803,7 @@ body.front-layout-news #lead-story, body.front-layout-news #secondary-stories, b
         width: 300px;
         float: none;
         margin-right: 20px;
-        min-height: 475px;
+        min-height: 490px;
     }
     
     body.front-layout-news3 #secondary-stories, body.front-layout-news3-alt #secondary-stories{
